# orocos-bayesian-filtering

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Doxyfile.in  INSTALL  README  README.md  THANKS  mkdeb  orocos-bfl.pc.in  revision.in  stack.xml
bfl_typekit/: CMakeLists.txt  README.first  mainpage.dox  manifest.xml
bfl_typekit/src/: bflTypekitConstructors.cpp  bflTypekitMatrix.cpp  bflTypekitMatrixs.cpp  bflTypekitProbability.cpp  bflTypekitProbabilitys.cpp  bflTypekitSample.cpp  bflTypekitSamples.cpp  bflTypekitVector.cpp  bflTypekitVectors.cpp  bflTypekitWeightedSample.cpp  bflTypekitWeightedSamples.cpp  bfl_typekit.cpp  bfl_typekit.hpp
debian/: rules  (+25 more)
examples/compare_filters/: CMakeLists.txt  mobile_robot_wall_cts.h  nonlinearanalyticconditionalgaussianmobile.cpp  test_compare_filters.cpp
examples/discrete_filter/: CMakeLists.txt  conditionalUniformMeasPdf1d.cpp  conditionalUniformMeasPdf1d.h  conditionaluniformpdf.cpp  conditionaluniformpdf.h  test_discrete_filter.cpp
examples/linear_kalman/: CMakeLists.txt  test_linear_kalman.cpp
examples/nonlinear_particle/: CMakeLists.txt  nonlinearMeasurementPdf.cpp  nonlinearMeasurementPdf.h  nonlinearSystemPdf.cpp  nonlinearSystemPdf.h  test_nonlinear_particle.cpp
orocos_bfl/: AUTHORS  CMakeLists.txt  Doxyfile.in  INSTALL  Makefile  README  README.md  THANKS  configure  mainpage.dox  manifest.xml
orocos_bfl/aids/: include.h.newmat11
orocos_bfl/config/: FindGINAC.cmake  FindMATRIX.cmake  FindRNG.cmake  check_depend.cmake  cmake_logging.cmake
orocos_bfl/debian/: bfl.doc-base.EX  changelog  control  copyright  cron.d.ex  emacsen-install.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  orocos-bfl.install  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
orocos_bfl/docs/: getting_started_guide.tex  installation_guide.tex  mobile_robot_simple.eps  robot_kalman_nomeas.eps  robot_nonlinearkalman_meas.eps
orocos_bfl/examples/: mobile_robot.cpp  mobile_robot.h  mobile_robot_wall_cts.h  nonlinearanalyticconditionalgaussianmobile.cpp  nonlinearanalyticconditionalgaussianmobile.h
orocos_bfl/examples/compare_filters/: nonlinearanalyticconditionalgaussianmobile.cpp  nonlinearanalyticconditionalgaussianmobile.h  test_compare_filters.cpp
orocos_bfl/examples/discrete_filter/: CMakeLists.txt  conditionalUniformMeasPdf1d.cpp  conditionalUniformMeasPdf1d.h  test_discrete_filter.cpp
orocos_bfl/examples/linear_kalman/: CMakeLists.txt  test_linear_kalman.cpp
orocos_bfl/src/: CMakeLists.txt  bfl_constants.h  bfl_err.h
orocos_bfl/tests/: CMakeLists.txt  approxEqual.cpp  approxEqual.hpp  complete_filter_test.cpp  complete_filter_test.hpp  dataAssociationFilterTest.hpp  ekf_test.cpp  ekf_test.hpp  matrixwrapper_test.cpp  matrixwrapper_test.hpp  model_test.cpp  model_test.hpp  model_test_ginac.cpp  model_test_ginac.hpp  pdf_test.cpp  pdf_test.hpp  sample_test.cpp  sample_test.hpp  smoother_test.cpp  smoother_test.hpp  test-runner.cpp
src/: CMakeLists.txt  SampleComposition.hpp  bfl_constants.h  bfl_typekit.hpp
src/dataAssociation/: CMakeLists.txt  dataAssociationFilter.h  dataAssociationFilterGaussian.cpp  dataAssociationFilterGaussian.h  dataAssociationFilterMCPdf.h
src/filter/: CMakeLists.txt  EKparticlefilter.cpp  EKparticlefilter.h  SRiteratedextendedkalmanfilter.cpp  asirfilter.cpp  asirfilter.h  bootstrapfilter.h  extendedkalmanfilter.cpp  extendedkalmanfilter.h  filter.cpp  filter.h  histogramfilter.cpp  histogramfilter.h  innovationCheck.cpp  innovationCheck.h  iteratedextendedkalmanfilter.cpp  iteratedextendedkalmanfilter.h  kalmanfilter.cpp  kalmanfilter.h  mixtureParticleFilter.cpp  mixtureParticleFilter.h  nonminimalkalmanfilter.cpp  nonminimalkalmanfilter.h  optimalimportancefilter.cpp  optimalimportancefilter.h  particlefilter.cpp  particlefilter.h
src/model/: CMakeLists.txt  analyticmeasurementmodel_gaussianuncertainty.cpp  analyticmeasurementmodel_gaussianuncertainty.h  analyticsystemmodel_gaussianuncertainty.cpp  analyticsystemmodel_gaussianuncertainty.h  discretesystemmodel.cpp  discretesystemmodel.h  linearanalyticmeasurementmodel_gaussianuncertainty.cpp  linearanalyticmeasurementmodel_gaussianuncertainty.h  linearanalyticmeasurementmodel_gaussianuncertainty_implicit.cpp  linearanalyticmeasurementmodel_gaussianuncertainty_implicit.h  linearanalyticsystemmodel_gaussianuncertainty.cpp  linearanalyticsystemmodel_gaussianuncertainty.h  measurementmodel.cpp  measurementmodel.h  nonlinearanalyticsystemmodel_gaussianuncertainty_ginac.cpp  nonlinearanalyticsystemmodel_gaussianuncertainty_ginac.h  systemmodel.cpp  systemmodel.h
src/pdf/: CMakeLists.txt  EKF_proposaldensity.cpp  EKF_proposaldensity.h  analyticconditionalgaussian.cpp  analyticconditionalgaussian.h  analyticconditionalgaussian_additivenoise.cpp  analyticconditionalgaussian_additivenoise.h  conditionalgaussian.cpp  conditionalgaussian.h  conditionalgaussian_additivenoise.cpp  conditionalgaussian_additivenoise.h  conditionalpdf.h  discreteconditionalpdf.cpp  discreteconditionalpdf.h  discretepdf.cpp  discretepdf.h  filterproposaldensity.cpp  filterproposaldensity.h  gaussian.cpp  gaussian.h  linearanalyticconditionalgaussian.cpp  linearanalyticconditionalgaussian.h  mcpdf.cpp  mcpdf.h  mixture.cpp  mixture.h  nonlinearanalyticconditionalgaussian_ginac.cpp  nonlinearanalyticconditionalgaussian_ginac.h  optimal_importance_density.cpp  optimal_importance_density.h  pdf.h  uniform.cpp  uniform.h
src/sample/: CMakeLists.txt  sample.h  weightedsample.h
src/smoother/: backwardfilter.cpp  backwardfilter.h  particlesmoother.cpp  particlesmoother.h  rauchtungstriebel.cpp  rauchtungstriebel.h  tutorial_config.h.in
src/wrappers/: CMakeLists.txt  config.h.in
tests/: CMakeLists.txt  approxEqual.cpp  approxEqual.hpp  complete_filter_test.cpp  complete_filter_test.hpp  dataAssociationFilterTest.cpp  ekf_test.cpp  matrixwrapper_test.cpp  matrixwrapper_test.hpp  model_test.cpp  model_test.hpp  model_test_ginac.cpp  model_test_ginac.hpp  pdf_test.cpp  pdf_test.hpp  sample_test.cpp  sample_test.hpp  smoother_test.cpp  smoother_test.hpp  test-runner.cpp
(+177 files in other folders)
