SET (ENV{GLOBAL_LIBRARY_SRCS} "")
SET (ENV{GLOBAL_INCLUDE_DIRS} "")

GLOBAL_ADD_INCLUDE( bfl/ bfl_constants.h bfl_err.h)

ADD_SUBDIRECTORY( wrappers )
ADD_SUBDIRECTORY( sample )
ADD_SUBDIRECTORY( pdf )
ADD_SUBDIRECTORY( model )
ADD_SUBDIRECTORY( filter )
ADD_SUBDIRECTORY( smoother )

ADD_LIBRARY(orocos-bfl SHARED $ENV{GLOBAL_LIBRARY_SRCS})
INSTALL_TARGETS( /lib orocos-bfl)
INCLUDE_DIRECTORIES( $ENV{GLOBAL_INCLUDE_DIRS} )